--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://js.bytescale.com/upload-widget-react/v4"></script>
-    <title>Admin_Dhukh_Bhanjan</title>
+    <title>Do Eat Admin Panel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
